--- a/design_gp.html
+++ b/design_gp.html
@@ -95,7 +95,7 @@ p{margin-bottom:15px}
 <nav>
     <ul>
         <li><a href="#" class="active">在线简历</a></li>
-        <li><a href="#">简历下载</a></li>
+        <li><a href="jlp.pdf" download="jlp.pdf">简历下载</a></li>
         <li><a href="index.html" target="_blank">个人作品集网站</a></li>
     </ul>
 </nav>
